--- a/app/globals.css
+++ b/app/globals.css
@@ -55,6 +55,8 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground border-zinc-600;
+    font-feature-settings: "rlig" 1, "calt" 1;
+    font-variation-settings: "wght" 400, "wdth" 100;
   }
 }
