--- a/app/globals.css
+++ b/app/globals.css
@@ -72,3 +72,17 @@
 .dark::-webkit-scrollbar-button {
   @apply bg-secondwhite;
 }
+
+@layer utilities {
+  .bg-dark-gradient {
+    background-image: linear-gradient(to right, #151313, #2B2727, #403A3A);
+  
+    
+    /* Add more background properties as needed */
+  }
+
+  .bg-light-gradient {
+    background-image: linear-gradient(to right, #FFFFFF, #E0E0E0, #C2C2C2);
+    /* Add more background properties as needed */
+  }
+}
