--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground border-zinc-600;
+    @apply bg-background text-foreground;
   }
 }
 
@@ -75,14 +75,22 @@
 
 @layer utilities {
   .bg-dark-gradient {
-    background-image: linear-gradient(to right, #151313, #2B2727, #403A3A);
-  
-    
+    background-image: linear-gradient(to right, #151313, #2b2727, #403a3a);
+
+    /* Add more background properties as needed */
+  }
+  .bg-container-dark-gradient{
+    background-image: linear-gradient(to left, #151313, #2b2727, #403a3a);
+
+    /* Add more background properties as needed */
+  }
+  .bg-container-light-gradient{
+    background-image: linear-gradient(to left, #ffffff, #e0e0e0, #c2c2c2);
     /* Add more background properties as needed */
   }
 
   .bg-light-gradient {
-    background-image: linear-gradient(to right, #FFFFFF, #E0E0E0, #C2C2C2);
+    background-image: linear-gradient(to right, #ffffff, #e0e0e0, #c2c2c2);
     /* Add more background properties as needed */
   }
 }
