--- a/app/globals.css
+++ b/app/globals.css
@@ -55,6 +55,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    cursor: none;
   }
 }
 
@@ -80,12 +81,12 @@
     /* Add more background properties as needed */
   }
   .bg-container-dark-gradient{
-    background-image: linear-gradient(to left, #151313, #2b2727, #403a3a);
+    background-image: linear-gradient(to bottom, #151313, #2b2727, #151313);
 
     /* Add more background properties as needed */
   }
   .bg-container-light-gradient{
-    background-image: linear-gradient(to left, #ffffff, #e0e0e0, #c2c2c2);
+    background-image: linear-gradient(to bottom, #ffffff, #e0e0e0, #ffffff);
     /* Add more background properties as needed */
   }
 
